--- a/unique/lib/Makefile
+++ b/unique/lib/Makefile
@@ -5,7 +5,7 @@
 ## Login   <raynau_a@epitech.net>
 ## 
 ## Started on  Mon Oct 21 16:23:34 2013 a
-## Last update Mon Mar 17 18:32:00 2014 matthieu raynaud de fitte
+## Last update Sun Mar 23 15:02:05 2014 matthieu raynaud de fitte
 ##
 
 CFLAGS  =       -Wall -Wextra -g3
@@ -40,7 +40,7 @@ all	:	$(NAME)
 		cp libmy.a ../libmy.a
 		cp my.h ../my.h
 
-abs	:	disp2 fclean disp $(OBJS)
+abs	:	abs_0 $(OBJS)
 		@echo -e '\033[0;33m - (3/5) >> compilation de la libmy.a \033[0m'
 		ar rc libmy.a $(OBJS)
 		@echo -e '\033[0;33m - (4/5) >> suppression de tous les fichiers temporaires \033[0m'
@@ -49,15 +49,15 @@ abs	:	disp2 fclean disp $(OBJS)
 		cp libmy.a ../libmy.a
 		cp my.h ../my.h
 
-$(NAME)	:	$(OBJS)
-		ar rc libmy.a $(OBJS)
-
-disp	:
-		@echo -e '\033[0;33m - (2/5) >> compilation des sources \033[0m'
-
-disp2	:
+abs_0	:
 		@echo -e ''
 		@echo -e '\033[0;33m - (1/5) >> suppression des fichiers temporaires \033[0m'
+		rm -f $(OBJS)
+		rm -f $(NAME)
+		@echo -e '\033[0;33m - (2/5) >> compilation des sources \033[0m'
+
+$(NAME)	:	$(OBJS)
+		ar rc libmy.a $(OBJS)
 
 clean	:
 		rm -f $(OBJS)
@@ -68,4 +68,4 @@ fclean	:	clean
 re	:	fclean all
 
 
-.PHONY	: all abs disp disp2 clean fclean re
+.PHONY	: all abs abs_0 clean fclean re
